--- a/package.json
+++ b/package.json
@@ -2,15 +2,28 @@
   "name": "todo",
   "version": "0.1.0",
   "private": true,
+  "description": "",
+  "keywords": [],
   "dependencies": {
     "@blueprintjs/core": "^4.4.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "base-64": "^1.0.0",
+    "bootstrap": "^5.1.3",
+    "jsonwebtoken": "^8.5.1",
+    "msw": "^0.42.0",
+    "node-sass": "^7.0.1",
     "react": "^18.1.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.1.0",
+    "react-if": "^4.1.4",
     "react-paginate": "^8.1.3",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "switch": "^0.0.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
