--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "base-64": "^1.0.0",
     "bootstrap": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
